--- a/src/app.css
+++ b/src/app.css
@@ -2,6 +2,7 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 
   background-color: #242424;
+  color: white;
 }
 
 body {
@@ -11,6 +12,7 @@ body {
 }
 
 button {
+  color: white;
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
