--- a/src/app.css
+++ b/src/app.css
@@ -1,7 +1,9 @@
 :root {
+  --backgroundColor: #242424;
+
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 
-  background-color: #242424;
+  background-color: var(--backgroundColor);
   color: white;
 }
 
