add .button class

--- a/src/app.scss
+++ b/src/app.scss
@@ -24,7 +24,10 @@ body {
   display: flex;
   place-items: center;
 
-  button {
+  button,
+  .button {
+    display: inline-block;
+    text-decoration: none;
     color: white;
     border-radius: 8px;
     border: 1px solid transparent;
