--- a/src/components/Modal.module.scss
+++ b/src/components/Modal.module.scss
@@ -16,9 +16,9 @@
   border: 1px solid gray;
   border-radius: 10px;
   position: absolute;
-  top: 50%;
+  top: 50px;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, 0%);
   .title {
     position: absolute;
     left: 0px;
