--- a/src/components/ToolBar/ToolButton.module.scss
+++ b/src/components/ToolBar/ToolButton.module.scss
@@ -1,13 +1,16 @@
 .ToolButton {
   background-color: var(--buttonBackgroundColor);
   height: 40px;
-  width: 40px;
-  padding: 0px;
+  min-width: 40px;
+  padding: 0px 5px 0px 5px;
   position: relative;
   float: left;
   margin: 5px;
   &.selected {
     background-color: gray;
+  }
+  &.unstyled {
+    padding: 0px;
   }
   &:hover {
     cursor: pointer;
