--- a/src/components/TerrainCell.module.scss
+++ b/src/components/TerrainCell.module.scss
@@ -10,43 +10,38 @@
   }
 }
 
-.cell {
+.tile {
   width: var(--tileSize);
   height: var(--tileSize);
+}
+.container {
+  position: relative;
+}
+.interactive {
+  cursor: pointer;
+}
+.layer {
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+.Root {
   float: left;
   font-size: 10px;
-  cursor: pointer;
-  position: relative;
   .border-hint {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    width: calc(var(--tileSize));
-    height: calc(var(--tileSize));
     border: 1px solid rgb(28, 27, 27);
     box-sizing: border-box;
   }
   .content-container {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    width: var(--tileSize);
-    height: var(--tileSize);
     img {
-      position: absolute;
       user-drag: none;
       -webkit-user-drag: none;
-      width: 100%;
-      height: 100%;
     }
   }
   .active {
     animation: pulse-background-color 2s infinite;
-    width: var(--tileSize);
-    height: var(--tileSize);
-    position: absolute;
-    left: 0px;
-    top: 0px;
     background-color: rgba(100, 108, 255, 0.5);
   }
 }
