--- a/src/app.scss
+++ b/src/app.scss
@@ -19,6 +19,15 @@
   background-color: var(--dangerBg) !important;
 }
 
+@keyframes pulse-background-color {
+  0% {
+    filter: brightness(100%);
+  }
+  50% {
+    filter: brightness(50%);
+  }
+}
+
 body {
   margin: 0;
   display: flex;
@@ -47,10 +56,47 @@ body {
     }
   }
 
+  .tile {
+    width: var(--tileSize);
+    height: var(--tileSize);
+  }
+  .container {
+    position: relative;
+  }
+  .interactive {
+    cursor: pointer;
+  }
+  .layer {
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+  }
+
   .row {
     overflow: hidden;
     .col {
       float: left;
     }
+  }
+}
+
+.TerrainCell {
+  float: left;
+  font-size: 10px;
+  .border-hint {
+    border: 1px solid rgb(28, 27, 27);
+    box-sizing: border-box;
+  }
+  .content-container {
+    img {
+      user-drag: none;
+      -webkit-user-drag: none;
+    }
+  }
+  .active {
+    animation: pulse-background-color 2s infinite;
+    background-color: rgba(164, 89, 89, 0.5); /* Second color */
   }
 }
