--- a/src/app.scss
+++ b/src/app.scss
@@ -90,6 +90,11 @@ button,
   }
 }
 
+textarea {
+  width: 100%;
+  height: 300px;
+}
+
 .TerrainCell {
   float: left;
   font-size: 10px;
@@ -111,5 +116,17 @@ button,
 
 .TerrainMap {
   .grid {
+  }
+}
+
+.ShareToolButton {
+  background-color: rgb(245, 114, 20);
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  height: 40px;
+  div {
+    position: relative;
+    top: -11px;
   }
 }
