--- a/src/app.scss
+++ b/src/app.scss
@@ -70,8 +70,8 @@ button,
 .layer {
   top: 0px;
   left: 0px;
-  width: 100%;
-  height: 100%;
+  right: 0px;
+  bottom: 0px;
   position: absolute;
 }
 
@@ -104,6 +104,7 @@ textarea {
   }
   .content-container {
     img {
+      width: 100%;
       user-drag: none;
       -webkit-user-drag: none;
     }
@@ -128,5 +129,40 @@ textarea {
   div {
     position: relative;
     top: -11px;
+  }
+}
+
+.modal-overlay {
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+.Modal {
+  user-select: none;
+
+  z-index: 999;
+  min-width: 400px;
+  background-color: black;
+  border: 1px solid gray;
+  border-radius: 10px;
+  position: absolute;
+  top: 50px;
+  left: 50%;
+  transform: translate(-50%, 0%);
+  .title {
+    height: 30px;
+    background-color: var(--accent2);
+    padding: 5px 0px 5px 10px;
+    border-radius: 9px 9px 0px 0px;
+    line-height: 30px;
+  }
+  .body {
+    margin-top: 30px;
+    padding: 20px;
+  }
+  .close {
+    position: absolute;
+    cursor: pointer;
+    top: 10px;
+    right: 10px;
   }
 }
