Refactor AssetBar css

--- a/src/app.scss
+++ b/src/app.scss
@@ -19,7 +19,7 @@
   background-color: var(--dangerBg) !important;
 }
 
-@keyframes pulse-background-color {
+@keyframes pulse-brightness {
   0% {
     filter: brightness(100%);
   }
@@ -61,6 +61,7 @@ button,
   width: var(--tileSize);
   height: var(--tileSize);
 }
+
 .container {
   position: relative;
 }
@@ -90,6 +91,10 @@ button,
   }
 }
 
+.pulsing {
+  animation: pulse-brightness 2s infinite;
+}
+
 textarea {
   width: 100%;
   height: 300px;
@@ -110,7 +115,6 @@ textarea {
     }
   }
   .active {
-    animation: pulse-background-color 2s infinite;
     background-color: rgba(164, 89, 89, 0.5); /* Second color */
   }
 }
@@ -178,5 +182,37 @@ textarea {
     a {
       color: white;
     }
+  }
+}
+
+.AssetBar {
+  margin: 10px;
+  border: 1px solid gray;
+  border-radius: 10px;
+  padding: 10px;
+  background-color: #332d2d;
+}
+
+.AssetBarItem {
+  padding: 2px;
+  display: inline-block;
+  margin-right: 5px;
+  border: 1px solid rgba(0, 0, 0, 0);
+  text-align: center;
+  .title {
+    font-size: 10px;
+    padding: 2px;
+    background-color: var(--accent2);
+    margin: 2px;
+    border-radius: 2px;
+  }
+  .controls {
+    button {
+      font-size: 10px;
+    }
+  }
+  .active {
+    border: 1px solid #714d3a;
+    border-radius: 10px;
   }
 }
