--- a/src/app.scss
+++ b/src/app.scss
@@ -246,4 +246,11 @@ textarea {
       display: block;
     }
   }
+
+  .CodeEditor {
+    textarea {
+      width: 100%;
+      height: 600px;
+    }
+  }
 }
