pixel editor refactor

--- a/src/app.scss
+++ b/src/app.scss
@@ -253,4 +253,21 @@ textarea {
       height: 600px;
     }
   }
+
+  .PixelEditor {
+    border: 1px solid gray;
+    margin: 5px;
+    &:hover {
+      cursor: pointer;
+    }
+    overflow: hidden;
+    width: calc(var(--pixelSize) * var(--spriteSize));
+    .pixel {
+      box-sizing: border-box;
+      border: 1px solid var(--accent2);
+      width: var(--pixelSize);
+      height: var(--pixelSize);
+      float: left;
+    }
+  }
 }
