CustomPalette css refactor

--- a/src/app.scss
+++ b/src/app.scss
@@ -270,4 +270,14 @@ textarea {
       float: left;
     }
   }
+
+  .CustomPalette {
+    .color {
+      box-sizing: border-box;
+      border: 1px solid var(--accent2);
+      width: var(--pixelSize);
+      height: var(--pixelSize);
+      float: left;
+    }
+  }
 }
